# partner-ai-meta

./: .gitignore  README.md
.github/: dependabot.yml
01-tutorials/01-adk-agentengine-vertexai-mass/: README.md
01-tutorials/01-adk-agentengine-vertexai-mass/llama4-adk-agent/: main.py  pyproject.toml
03-demos/: README.md
03-demos/vogue-concierge/: .gitignore  Procfile  README.md  bundle.py  config.py  config.yml  main.py  pyproject.toml  utils.py  yaml_parser.py
03-demos/vogue-concierge/deploy/: delete_resources.py  deploy_to_ae.py  deploy_to_cr.py  load_data.py  load_data_bigquery.py  load_data_catalog.py  load_data_rag.py  required_apis.yml  required_auth.yml
03-demos/vogue-concierge/deploy/data/: catalog_for_rag.md  products.json  trend_report.md
03-demos/vogue-concierge/lib/: __init__.py  file_utils.py  shell_utils.py
03-demos/vogue-concierge/tests/: test_agent.py  test_app.py
03-demos/vogue-concierge/vogue_concierge_agent/: .gitignore  agent.py  prompt.py  tools.py
03-demos/vogue-concierge/vogue_concierge_app/backend/: .gcloudignore  .gitignore  agent_engine_agent.py  config.py  local_agent.py  main.py  pyproject.toml  requirements.txt
03-demos/vogue-concierge/vogue_concierge_app/frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs
03-demos/vogue-concierge/vogue_concierge_app/frontend/app/: globals.css  layout.tsx  page.tsx
03-demos/vogue-concierge/vogue_concierge_app/frontend/components/: ChatMessage.tsx  Header.tsx  ProductCards.tsx  SamplePrompts.tsx
(+2 files in other folders)
